# OpsGuild_MetalDeploy

./: .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.jenkins  Jenkinsfile  LICENSE  Makefile  README.md  action.yml  coverage.xml  deploy.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: example-docker.yml  example-k8s.yml  publish-jenkins.yml  release-tagging.yml  test.yml
changelogs/: 2026-01-28_08-11-32.md  2026-01-28_08-15-24.md  2026-01-28_09-12-32.md  2026-01-28_09-16-51.md  2026-01-28_11-20-28.md  2026-01-28_11-32-52.md  2026-01-28_11-36-14.md  2026-01-29_14-25-29.md  2026-01-29_14-34-57.md  2026-01-29_14-56-07.md  2026-01-29_15-37-50.md  2026-01-29_15-41-00.md  2026-01-29_16-00-53.md  2026-01-29_16-10-08.md  2026-01-29_16-48-08.md  2026-01-29_17-26-50.md  2026-01-29_17-52-23.md  2026-01-29_18-43-51.md  2026-01-29_18-44-07.md  2026-01-29_18-50-28.md  2026-01-29_19-11-03.md  2026-01-29_19-47-44.md  2026-01-29_19-48-25.md  2026-01-29_20-04-22.md  2026-01-29_20-18-38.md  2026-01-29_20-26-44.md
docs/: deployment-types.md  env-generation.md  git-auth.md  installation.md  jenkins.md  manual-usage.md
scripts/: install.sh
src/: config.py  connection.py  env_manager.py  git_ops.py  orchestrator.py
src/providers/: baremetal.py  docker.py  k8s.py  utils.py
tests/: README.md  conftest.py  test_connection.py  test_db_utils.py  test_deploy.py  test_env_files.py  test_env_manager.py  test_error_handling.py  test_errors.py  test_git_ops.py  test_integration.py  test_orchestrator.py  test_providers.py
tests/integration/: Dockerfile.test-ssh  conftest.py  docker-compose.yml  test_integration_full.py
(+45 files in other folders)
