[tool.poetry]
name = "metal-deploy-action"
version = "1.0.0"
description = "GitHub Action for deploying applications to baremetal servers via SSH"
authors = ["OpsGuild <opsguild@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.9"
fabric = "^3.0.0"
invoke = "^2.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.12.0"
pyyaml = "^6.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services",
    "slow: Tests that take a long time to run",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
extend-exclude = 'generated_envs|generated_envs_2'

[tool.isort]
profile = "black"
line_length = 100
skip = ["generated_envs", "generated_envs_2"]

[tool.coverage.run]
source = ["src", "main.py"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
